@@ -1,5 +1,7 @@
 2006-06-07  David Reveman  <davidr@novell.com>
 
+	* plugins/compiz.schemas.in.in: Regen.
+
 	* plugins/cube.c (cubePaintTransformedScreen):
 	* plugins/wobbly.c (wobblyDrawWindowGeometry):
 	* plugins/switcher.c (switchPaintWindow):
